--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
-            storeFile file('C:/Users/Ajinkya/Documents/Workspace/debug.keystore')
+            storeFile file('/home/jayesh/.android/debug.keystore')
             storePassword 'android'
         }
     }
