--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         config {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
-            storeFile file('C:/Users/Ajinkya/Documents/Visio/debug.keystore')
+            storeFile file('/home/jayesh/AndroidStudioProjects/visio/debug.keystore')
             storePassword 'android'
         }
     }
