--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-
-
     signingConfigs {
         config {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
-            storeFile file('/home/jayesh/AndroidStudioProjects/visio/debug.keystore')
+            storeFile file('C:/Users/Ajinkya/Documents/Visio/debug.keystore')
             storePassword 'android'
         }
     }
@@ -29,12 +27,6 @@ android {
             signingConfig signingConfigs.config
         }
     }
-
-    packagingOptions {
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-    }
 }
 
 dependencies {
@@ -46,7 +38,4 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
-    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
-    compile 'com.firebase:firebase-client-android:2.5.2'
-    compile files('src/main/jniLibs/indoors-library-surface.jar')
 }
